# poverty_rate_dashboard

./: README.md  pylama.ini  pyproject.toml  requirements.txt
data/processed/: poverty_rate_Tunisia_2020.csv
notebooks/: 00_choropleth.ipynb  00_choropleth.py
poverty_rate_dashboard/: main.py  process_raw_pdf.py  string_matching.py
tests/: test_poverty_rate_dashboard.py
