[tool.poetry]
name = "poverty_rate_dashboard"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tabula-py = "^2.2.0"
pandas = "^1.1.2"
streamlit = "^0.70.0"
pyprojroot = "^0.2.0"
plotly = "4.9.0"
statsmodels = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
pylama = "^7.7.1"
black = "^20.8b1"
pdbpp = "^0.10.2"
loguru = "^0.5.3"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
