[tool.poetry]
name = "poverty_rate_dashboard"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.9,<3.11"
pandas = "^1.3.5"
tabula-py = "^2.3.0"
streamlit = "^1.3.1"
pyprojroot = "^0.2.0"
plotly = "^5.5.0"
statsmodels = "^0.13.1"
textdistance = "^4.2.2"
glom = "^20.11.0"
scipy = "^1.7.3"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.3"
loguru = "^0.5.3"
wheel = "^0.37.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
